--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -45,6 +45,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
   readonly placeholderID: {{useImport "ID"}};
   readonly ent = {{$node}};
   private input: {{$input}};
+  private m: Map<string, any> = new Map();
 
   public constructor(
     public readonly viewer: {{useImport "Viewer"}},
@@ -80,6 +81,16 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
       ...this.input,
       ...input,
     };
+  }
+
+  // store data in Builder that can be retrieved by another validator, trigger, observer later in the action
+  storeData(k: string, v: any) {
+    this.m.set(k, v);
+  }
+
+  // retrieve data stored in this Builder with key
+  getStoredData(k: string) {
+    return this.m.get(k);
   }
 
   {{if .HasAssociationEdges -}}
