some graphql fixes
* id fields in graphql not working for nullable id fields
* passing the wrong field if fieldName != graphqlName

related https://github.com/lolopinto/ent/issues/240

--- a/internal/graphql/ts_templates/interfaces.tmpl
+++ b/internal/graphql/ts_templates/interfaces.tmpl
@@ -13,7 +13,11 @@
     {{if .UseImport -}}
       {{$type = useImport $type -}}
     {{end -}}
-    {{.Name}}: {{$type}};
+    {{if .Optional -}}
+      {{.Name}}?: {{$type}};
+    {{ else -}}
+      {{.Name}}: {{$type}};
+    {{end -}}
   {{ end -}}
   }
 
