--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -44,6 +44,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
   orchestrator: {{useImport "Orchestrator"}}<{{$node}}>;
   readonly placeholderID: {{useImport "ID"}};
   readonly ent = {{$node}};
+  readonly nodeType = {{useImport "NodeType"}}.{{$node}};
   private input: {{$input}};
   private m: Map<string, any> = new Map();
 
