multi-issue fix for #694
fixes https://github.com/lolopinto/ent/issues/694

* ParseSchema() in input.go was changed in https://github.com/lolopinto/ent/pull/506 to support multiple ways to parse the schema because of a breaking change. that ended up masking issues if there was an error json marshalling. considering that was a while ago, simplify by no longer supporting the old way
* when nullable: false is passed, the following error is shown
```
  json: cannot unmarshal bool into Go struct field Action.schemas.actions.actionOnlyFields of type input.NullableItem
```
this is because JS version of the code supports multiple types but go doesn't. update the JS schema parsing to handle when nullable: false is passed. also fix a potential other scenario this could happen with polymorphic: false
* the way imports work in base file is wonky and since enum types have other imports that are needed, that wasn't being passed along
created https://github.com/lolopinto/ent/issues/703 to fix the issue long term. did a workaround in the code generation to import the type

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -25,7 +25,11 @@
   {{end -}}
 {{ end}}
 
+{{$extImpPath := .Package.ExternalImportPath -}}
 {{ range $int := $action.GetCustomInterfaces -}}
+  {{ range $imp := $int.GetEnumImports -}}
+    {{ reserveImport $extImpPath $imp -}}
+  {{ end -}}
   interface {{$int.TSType}} {
     {{ range $field := $int.Fields -}}
       {{$type := $field.TsBuilderType -}}
