--- a/tsent/cmd/generateschema/schema.tmpl
+++ b/tsent/cmd/generateschema/schema.tmpl
@@ -1,4 +1,4 @@
-{{ reserveImport .Package.SchemaPackagePath "BaseEntSchema" "Field" "Schema" "Edge" "AssocEdgeGroup" "Action" "Constraint" "Index" }}
+{{ reserveImport .Package.SchemaPackagePath "BaseEntSchema" "FieldMap" "Schema" "Edge" "AssocEdgeGroup" "Action" "Constraint" "Index" }}
 
 {{/* takes an Import with ImportPath Import DefaultImport fields */ -}}
 {{define "reserveImport"}}
@@ -42,13 +42,13 @@
 
   {{end -}}
 
-  fields: {{useImport "Field"}} [] = [
+  fields: {{useImport "FieldMap"}} = {
   {{ range $field := .Fields -}}
     {{$imp := $field.GetImport -}}
     {{- template "reserveImport" $imp -}}
-    {{useImport $imp.Import}}({{fieldObjectCall $field}}),
+    {{$field.Name}}: {{useImport $imp.Import}}({{fieldObjectCall $field}}),
   {{- end -}}
-  ];
+  };
 
 
   {{ if gt .DBRows.Len 0 -}}
