stash. not working yet

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -27,7 +27,7 @@
 
 {{$pkg := .Package -}}
 {{ range $action.GetCustomInterfaces -}}
-  {{template "interface.tmpl" (dict "Interface" . "Package" $pkg) }}  
+  {{template "interface.tmpl" (dict "RootInterface" . "Interface" . "Package" $pkg) }}  
 {{end -}}
 
 {{ $node := useImport .NodeData.Node -}}
