--- a/internal/tscode/custom_interface.tmpl
+++ b/internal/tscode/custom_interface.tmpl
@@ -2,15 +2,19 @@
 
 {{ $ci := .Interface}}
 {{ $pkg := .Package }}
-{{ range $ci.GetTSEnums -}}
+{{ range $ci.GetAllEnums -}}
   {{/* TODO when imported here? */}}
   {{if not .Imported -}}
     {{ template "enum.tmpl" .}}
   {{end -}}
 {{ end}}
 
-{{ range $ci.SubInterfaces -}}
-  {{ template "interface.tmpl" (dict "RootInterface" $ci "Interface" . "Package" $pkg)}}
+{{ range $ci.GetAllCustomTypes -}}
+  {{ if .IsCustomInterface -}}
+    {{ template "interface.tmpl" (dict "RootInterface" $ci "Interface" . "Package" $pkg)}}
+  {{ end }}
+  {{ if .IsCustomUnion -}}
+    {{ .GetTypeDeclaration }}
+  {{ end -}}
 {{ end -}}
 
-{{ template "interface.tmpl" (dict "RootInterface" $ci "Interface" $ci "Package" $pkg)}}
