adds StructType and StructListType where the fields can be defined clearly (#739)

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -48,7 +48,11 @@
       {{end -}}
     {{end -}}
   }
+{{end -}}
   
+{{$pkg := .Package -}}
+{{ range $action.GetCustomInterfaces -}}
+  {{template "interface.tmpl" (dict "RootInterface" . "Interface" . "Package" $pkg) }}  
 {{end -}}
 
 {{ $node := useImport .NodeData.Node -}}
