fix referencing nested object in action
if you have an action that has an action only field which references a foreignKey or anything that generates a fieldEdge, we eventually have an error because we've not "reserved" that object

because field.TsBuilderImports returns strings instead of the full import type, we were trying to reference a field that doesn't exist

correct fix is to change TsBuilderImports from strings to ImportType so we don't need this hack with schema but that's a more involved fix

for now, we're just referencing all nodes in the schema to work around it

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -1,13 +1,14 @@
 {{reserveImport .Package.PackagePath "Viewer" "ID" "Ent" "AssocEdgeInputOptions"}}
 {{reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "saveBuilder" "saveBuilderX" "Orchestrator"}}
 
+{{ $schema := .Schema}}
 {{with .NodeData -}}
 {{ $schemaPath := printf "src/schema/%s" .PackageName }}
 {{ reserveDefaultImport $schemaPath "schema"}}
 {{ reserveImport "src/ent/generated/const" "EdgeType" "NodeType" }}
 
 
-{{ range .GetImportPathsForDependencies -}}
+{{ range .GetImportPathsForDependencies $schema -}}
   {{ if .DefaultImport -}}
     {{ reserveDefaultImport .PackagePath .Import}}
   {{ else -}}
