--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -5,9 +5,9 @@
 
 {{ range .NodeData.GetImportPathsForDependencies .Schema -}}
   {{ if .DefaultImport -}}
-    {{ reserveDefaultImport .PackagePath .Import}}
+    {{ reserveDefaultImport .ImportPath .Import}}
   {{ else -}}
-    {{ reserveImport .PackagePath .Import}}
+    {{ reserveImport .ImportPath .Import}}
   {{ end -}}
 {{ end -}}
 
