--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -10,9 +10,9 @@
 
 {{ range .GetImportPathsForDependencies $schema -}}
   {{ if .DefaultImport -}}
-    {{ reserveDefaultImport .PackagePath .Import}}
+    {{ reserveDefaultImport .ImportPath .Import}}
   {{ else -}}
-    {{ reserveImport .PackagePath .Import}}
+    {{ reserveImport .ImportPath .Import}}
   {{ end -}}
 {{ end}}
 
