--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -17,9 +17,9 @@
 
 {{ range .GetImportsForBaseFile -}} 
   {{ if .DefaultImport -}}
-    {{ reserveDefaultImport .PackagePath .Import}}
+    {{ reserveDefaultImport .ImportPath .Import}}
   {{ else -}}
-    {{ reserveImport .PackagePath .Import}}
+    {{ reserveImport .ImportPath .Import}}
   {{end -}}
 {{ end}}
 
