--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -8,7 +8,7 @@
 {{with .Info -}}
 
   {{ range .Imports }} 
-    {{reserveImportPath .}}
+    {{reserveImportPath . false}}
   {{ end}}
 
   {{$node := useImport .Node}}
