--- a/tsent/cmd/generateschema/schema.tmpl
+++ b/tsent/cmd/generateschema/schema.tmpl
@@ -1,10 +1,20 @@
 {{ reserveImport .Package.SchemaPackagePath "BaseEntSchema" "Field" "Schema" "Edge" "AssocEdgeGroup" "Action" "Constraint" "Index" }}
 
+{{/* takes an Import with ImportPath Import DefaultImport fields */ -}}
+{{define "reserveImport"}}
+  {{ $imp := . -}}
+  {{ if $imp.DefaultImport -}}
+    {{reserveDefaultImport $imp.ImportPath $imp.Import -}}
+  {{ else -}}
+    {{reserveImport $imp.ImportPath $imp.Import -}}
+  {{ end -}}
+{{- end -}}
+
 {{define "kvObjectLine" -}}
   {{ $obj := . -}}
   {{- range $imp := $obj.GetImports -}}
-    {{ reserveImport $imp -}}
-    {{ $ignore := useImport $imp.Import -}}
+    {{- template "reserveImport" $imp -}}
+      {{ $ignore := useImport $imp.Import -}}
   {{- end -}}
   {{ $obj.String }},
 {{- end -}}
@@ -35,7 +45,7 @@
   fields: {{useImport "Field"}} [] = [
   {{ range $field := .Fields -}}
     {{$imp := $field.GetImport -}}
-    {{ reserveImport $imp }}
+    {{- template "reserveImport" $imp -}}
     {{useImport $imp.Import}}({{fieldObjectCall $field}}),
   {{- end -}}
   ];
