--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -3,7 +3,7 @@
 {{ reserveImport "src/ent/" "NodeType"}}
 {{ reserveImport .PrivacyConfig.Path .PrivacyConfig.PolicyName }}
 
-{{ range .NodeData.GetImportPathsForDependencies .Schema -}}
+{{ range .NodeData.GetImportPathsForDependencies -}}
   {{ reserveImportPath . true -}}
 {{ end -}}
 
