ability to customize graphql mutation format
default is noun-verb but we may prefer verb-noun in other scenarios or if we're migrating an existing system

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -57,7 +57,7 @@
 {{$hasInput := hasInput $action -}}
 {{$inputName := "" -}}
 {{ if $hasInput -}}
-  {{$inputName = $action.GetInputName -}}
+  {{$inputName = $action.GetActionInputName -}}
 
   export interface {{$inputName}} {
     {{ range $field := $action.GetFields -}}
