--- a/internal/tscode/action.tmpl
+++ b/internal/tscode/action.tmpl
@@ -5,7 +5,7 @@
 {{ $hasInput := hasInput $action -}}
 {{ $inputName := "" -}}
 {{ if $hasInput -}}
-  {{$inputName = $action.GetInputName -}}
+  {{$inputName = $action.GetActionInputName -}}
 {{ end -}}
 
 {{ reserveImport .BasePath $baseName $inputName -}}
