import types in fields in graphql mutations
if the graphql name is different from the typescript name, we weren't importing types in the custom typescript interface

this fixes that

seen when there's a custom name or we have snake_case field format for a complex field

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -7,7 +7,7 @@
 {{/* import types that we may need e.g. UserType, ContactType, etc */}}
 {{ range $baseObj.Imports -}} 
   {{if .ImportPath -}}
-    {{reserveImport .ImportPath .Import}}
+    {{reserveImportPath . true}}
   {{end -}}
 {{ end -}}
 
