--- a/internal/graphql/ts_templates/interfaces.tmpl
+++ b/internal/graphql/ts_templates/interfaces.tmpl
@@ -13,6 +13,9 @@
     {{if .UseImport -}}
       {{$type = useImport $type -}}
     {{end -}}
+    {{ range .UseImports -}}
+      {{$ignore := useImport . -}}
+    {{ end -}}
     {{if .Optional -}}
       {{.Name}}?: {{$type}};
     {{ else -}}
