stash. generated read apis. used in todo-sqlite and more
now need to write tests to confirm generated APIs work + generate delete APIs

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -2,7 +2,7 @@
 {{reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "saveBuilder" "saveBuilderX" "Orchestrator"}}
 
 {{with .NodeData -}}
-{{ $schemaPath := printf "src/schema/%s" .PackageName }}
+{{ $schemaPath := .GetSchemaPath }}
 {{ reserveDefaultImport $schemaPath "schema"}}
 {{ reserveImport "src/ent/generated/const" "EdgeType" "NodeType" }}
 
