--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -243,7 +243,7 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
     this.builder.orchestrator.setDisableTransformations(true);
     await this.builder.saveX();
   }
-  {{ end -}}
+  {{ end}}
 
   static create<T extends {{$actionName}}>(
     this: new ({{$constructor}}) => T,
