--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -101,9 +101,9 @@ export class {{$baseClass}} {
   {{ if .TransformsSelect }}
     {{$noTransformLoader := useImport .GetLoaderNoTransformName -}}
     // loadNoTransform and loadNoTransformX exist to load the data from the db 
-    // with no transformations which are currently done via an implicit trigger
+    // with no transformations which are currently done implicitly
     // we don't generate the full complement of read-APIs 
-    // but can easily query the data with {{$noTransformLoader}}
+    // but can easily query the raw data with {{$noTransformLoader}}
     static async loadNoTransform<T extends {{$baseClass}}>(
       this: {{$thisType}},
       viewer: {{$viewerType}}, 
