--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -8,11 +8,13 @@
 
 {{with .NodeData -}}
 {{$loaderInfo := printf "%sLoaderInfo" .NodeInstance -}}
-{{$loaderName := printf "%sLoader" .NodeInstance -}}
+{{$loaderName := .GetLoaderName -}}
 {{ reserveImport "src/ent/generated/loaders" $loaderInfo -}}
 
 {{ range .GetNodeLoaders -}}
-  {{ reserveImport "src/ent/generated/loaders" .Name -}}
+  {{range . }}
+    {{ reserveImport "src/ent/generated/loaders" .Name -}}
+  {{ end }}
 {{ end -}}
 
 {{ range .GetImportsForBaseFile -}} 
@@ -95,6 +97,46 @@ export class {{$baseClass}} {
       loaderOptions.apply(this),
     ) as T;
   }
+
+  {{ if .TransformsSelect }}
+    {{$noTransformLoader := useImport .GetLoaderNoTransformName -}}
+    // loadNoTransform and loadNoTransformX exist to load the data from the db 
+    // with no transformations which are currently done implicitly
+    // we don't generate the full complement of read-APIs 
+    // but can easily query the raw data with {{$noTransformLoader}}
+    static async loadNoTransform<T extends {{$baseClass}}>(
+      this: {{$thisType}},
+      viewer: {{$viewerType}}, 
+      id: {{$idType}},
+    ): Promise<T | null>{
+      const opts = {
+        ...{{$baseClass}}.loaderOptions.apply(this),
+        loaderFactory: {{$noTransformLoader}},
+      };
+
+      return await {{useImport "loadEnt"}}(
+        viewer, 
+        id, 
+        opts,
+      ) as T | null;
+    }
+
+    static async loadNoTransformX<T extends {{$baseClass}}>(
+      this: {{$thisType}},
+      viewer: {{$viewerType}}, 
+      id: {{$idType}},
+    ): Promise<T> {
+      const opts = {
+        ...{{$baseClass}}.loaderOptions.apply(this),
+        loaderFactory: {{$noTransformLoader}},
+      };
+      return await {{useImport "loadEntX"}}(
+        viewer, 
+        id, 
+        opts,
+      ) as T;
+    }
+  {{ end}}
 
   static async loadMany<T extends {{$baseClass}}>(
     this: {{$thisType}},
