--- a/internal/db/db_schema.tmpl
+++ b/internal/db/db_schema.tmpl
@@ -2,6 +2,7 @@
 
 import sqlalchemy as sa
 from sqlalchemy.dialects import postgresql
+from autoschema.schema_item import FullTextIndex
 
 metadata = sa.MetaData()
 
