--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -209,7 +209,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     return this.orchestrator.editedEntX();
   }
 
-  private getEditedFields(): Map<string, any> {
+  private async getEditedFields(): Promise<Map<string, any>> {
     const fields = this.input;
 
     const result = new Map<string, any>();
@@ -232,12 +232,26 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
               {{useImport "NodeType"}}.{{$inverseEdge.NodeInfo.Node}},
             );
           }
-          if (this.existingEnt && this.existingEnt.{{$tsFieldName}} && this.existingEnt.{{$tsFieldName}} !== fields.{{$tsFieldName}}) {
-            this.orchestrator.removeInboundEdge(
-              this.existingEnt.{{$tsFieldName}},
-              {{useImport "EdgeType"}}.{{$inverseEdge.TsEdgeConst}},
-            );
-          }
+          {{ if $field.HasAsyncAccessor $cfg -}}
+            // can't have this be dependent on privacy so need to fetch the raw data...
+            if (this.existingEnt) {
+              {{/* TODO eventually this needs to be smart enough and parallelize with any other possible fields here */ -}}
+              const rawData = await {{$node}}.loadRawData(this.existingEnt.id, this.viewer.context);
+              if (rawData && rawData.{{$field.GetDbColName}} !== null && rawData.{{$field.GetDbColName}} !== undefined) {
+                this.orchestrator.removeInboundEdge(
+                  rawData.{{$field.GetDbColName}},
+                  {{useImport "EdgeType"}}.{{$inverseEdge.TsEdgeConst}},
+                );
+              }
+            }
+          {{ else -}}
+            if (this.existingEnt && this.existingEnt.{{$tsFieldName}} && this.existingEnt.{{$tsFieldName}} !== fields.{{$tsFieldName}}) {
+              this.orchestrator.removeInboundEdge(
+                this.existingEnt.{{$tsFieldName}},
+                {{useImport "EdgeType"}}.{{$inverseEdge.TsEdgeConst}},
+              );
+            }
+          {{ end -}}
         }
       {{end -}}
     {{end -}}
